%%{init: {'theme': 'default', 'themeVariables': { 'background': '#ffffff' }}}%%
classDiagram

    class Mission {
        -missionId: String
        -date: String
        -location: String
        -outcome: String
        -damageCost: long
        -comment: String
        -curse: Curse
        -sorcerers: List~Sorcerer~
        -techniques: List~Technique~
        -civilianImpact: CivilianImpact
        -enemyActivity: EnemyActivity
        -environmentConditions: EnvironmentConditions
        -economicAssessment: EconomicAssessment
        -operationTimeline: List~OperationEvent~
        +getters()
        +setters()
        +validate() void
    }

    class Curse {
        -name: String
        -threatLevel: String
        +getters()
        +setters()
    }

    class Sorcerer {
        -name: String
        -rank: String
        +getters()
        +setters()
    }

    class Technique {
        -name: String
        -type: String
        -owner: String
        -damage: int
        +getters()
        +setters()
    }

    class CivilianImpact {
        -evacuated: Integer
        -injured: Integer
        -missing: Integer
        +getters()
        +setters()
    }

    class EnemyActivity {
        -behaviorType: String
        -targetPriority: List~String~
        -attackPatterns: List~String~
        -mobility: String
        -escalationRisk: String
        +getters()
        +setters()
    }

    class EnvironmentConditions {
        -weather: String
        -timeOfDay: String
        -visibility: String
        +getters()
        +setters()
    }

    class OperationEvent {
        -timestamp: String
        -type: String
        -description: String
        +getters()
        +setters()
    }

    class EconomicAssessment {
        -estimatedDamage: long
        -compensationPaid: long
        -budgetImpact: String
        +getters()
        +setters()
    }

%% Реализация связей в коде (через поля классов)
Mission o-- "0..*" Sorcerer : -sorcerers
Mission o-- "0..*" Technique : -techniques

Mission *-- "1" Curse : -curse
Mission *-- "1" CivilianImpact : -civilianImpact
Mission *-- "1" EnemyActivity : -enemyActivity
Mission *-- "1" EnvironmentConditions : -environmentConditions
Mission *-- "1" EconomicAssessment : -economicAssessment
Mission *-- "0..*" OperationEvent : -operationTimeline